[gd_scene load_steps=2 format=3 uid="uid://b07q1380brcj7"]

[ext_resource type="Script" uid="uid://dbo3jpx1bfq37" path="res://scripts/game_over_menu.gd" id="1_ru3ty"]

[node name="game_over_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ru3ty")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -38.5
offset_right = 42.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="GameOverHeaderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "--Game Over--"
horizontal_alignment = 1

[node name="ButtonHBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonHBoxContainer3"]
process_mode = 3
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonHBoxContainer3"]
layout_mode = 2
text = "Main Menu
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/RestartButton" to="." method="_on_restart_pressed"]
